feat: Update to draft saving and bug fixes
